--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,27 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --text-black: black;
+  --text-blue: #18a0fb;
+  --text-white: #fff;
+  --bg-blue: #18a0fb;
+  --bg-white: #fff;
+  --text-sm: 1rem;
+  --text-md: 1.3;
+  --text-title-1: 2.4rem;
+  --text-title-2: 2rem;
+  --max-width: 1288px;
+  --bold-sm: 200;
+  --bold-md: 400;
+  --bold-lg: 600;
+  --transition: all 0.3s ease-in;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+* {
+  font-family: "Montserrat", sans-serif;
 }
-a:hover {
-  color: #535bf2;
+li {
+  list-style: none;
 }
-
 body {
+  background-color: rgb(241, 241, 241);
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  padding: 0;
 }
