--- a/src/components/layout/footer/Footer.css
+++ b/src/components/layout/footer/Footer.css
@@ -1,6 +1,7 @@
 footer {
   height: 17rem;
   padding: 3.5rem;
+  z-index: 10;
   margin: auto;
   background-color: var(--bg-white);
   box-shadow: rgba(27, 31, 35, 0.04) 0px -3px 0px,
@@ -53,5 +54,16 @@ footer {
 }
 .footer-socials {
   display: flex;
-  gap: 1.5rem;
+  gap: 0.5rem;
+}
+.footer-socials button {
+  max-width: 40px;
+  max-height: 30px;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+.footer-socials img {
+  width: 100%;
+  height: 100%;
 }
