--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,16 +1,18 @@
 main {
   max-width: var(--max-width);
-  margin: 8rem auto;
+  margin: 8rem auto 2.5rem;
+  background-color: var(--bg-white);
 }
 .home-section1 {
-  height: 500px;
-  padding: 50px;
   box-sizing: border-box;
+  min-height: 450px;
+  padding: 50px;
   color: var(--text-white);
 }
 
 .home-container-section1 {
   height: 350px;
+  animation: fadeIn 1s ease-in-out;
   background-image: linear-gradient(
       to right,
       rgba(0, 0, 0, 0.7),
@@ -20,5 +22,42 @@ main {
   padding: 3rem;
 }
 .section1-half {
+  z-index: 1;
   max-width: 50%;
+  animation: slideInRight 1s ease-in-out;
+}
+.section2 {
+  padding: 50px;
+  display: flex;
+}
+
+.section2-half {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+.section2 .grey {
+  background: var(--bg-gray);
+  font-weight: var(--bold-lg);
+}
+.section2 .blue {
+  background-color: var(--bg-blue);
+  color: var(--text-white);
+  font-weight: var(--bold-lg);
+}
+
+.section2-icons p {
+  width: 70%;
+  padding: 1rem 1rem;
+  border-radius: 15px;
+  text-align: center;
+}
+.section2-icons div {
+  display: flex;
+  align-items: center;
+  gap: 10%;
+}
+.section2 img {
+  width: 40px;
+  height: 40px;
 }
