--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,9 @@
   --bold-md: 400;
   --bold-lg: 600;
   --transition: all 0.3s ease-in;
+  --transition-2: all 0.1s ease-in;
+  --translate-1: translateY(-2px);
+  --translate-2: translateY(-4px);
 }
 * {
   font-family: "Montserrat", sans-serif;
