--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -61,3 +61,49 @@ main {
   width: 40px;
   height: 40px;
 }
+.accordion-container {
+  padding: 50px;
+}
+.accordion-top {
+  height: 150px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  align-content: space-around;
+}
+.accordion-btn {
+  width: 300px;
+  height: 50px;
+}
+.accordion-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 0;
+  gap: 3rem;
+}
+.accordion-bottom img {
+  width: 100%;
+  height: 100%;
+}
+.accordion-info {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+}
+.accordion-info p {
+  text-align: left;
+}
+.accordion-top button {
+  border: none;
+  border-radius: 15px;
+  cursor: pointer;
+  transition: var(--transition-2);
+}
+.accordion-top button:hover {
+  transform: var(--translate-1);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
