--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,15 @@
   --text-white: #fff;
   --bg-blue: #51baff;
   --bg-white: #fff;
+  --bg-blue-light: rgb(239, 249, 250);
   --bg-gray: rgb(241, 241, 241);
+  --bg-white-1: rgb(168, 168, 168);
   --text-sm: 1rem;
   --text-md: 1.3;
-  --text-title-1: 2.4rem;
-  --text-title-2: 2rem;
+  --title-1: 2.4rem;
+  --title-2: 2rem;
+  --title-3: 1.5rem;
+  --title-4: 1rem;
   --max-width: 1288px;
   --bold-sm: 200;
   --bold-md: 400;
