--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,9 @@
   --title-2: 2rem;
   --title-3: 1.5rem;
   --title-4: 1rem;
+  --font-size-1: 2rem;
+  --font-size-2: 1.5rem;
+  --font-size-3: 1.2rem;
   --max-width: 1288px;
   --bold-sm: 200;
   --bold-md: 400;
@@ -32,6 +35,12 @@ body {
   background-color: rgb(241, 241, 241);
   margin: 0;
   padding: 0;
+}
+main {
+  max-width: var(--max-width);
+  margin: 8rem auto 2.5rem;
+  background-color: var(--bg-white);
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 @keyframes fadeIn {
