--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,9 +1,3 @@
-main {
-  max-width: var(--max-width);
-  margin: 8rem auto 2.5rem;
-  background-color: var(--bg-white);
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-}
 .home-section1 {
   box-sizing: border-box;
   min-height: 450px;
@@ -20,6 +14,9 @@ main {
       rgba(0, 0, 0, 0.7)
     ),
     url("img/image-torniquete-1.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   padding: 3rem;
 }
 .section1-half {
