--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   --bg-blue-light: rgb(239, 249, 250);
   --bg-gray: rgb(241, 241, 241);
   --bg-white-1: rgb(168, 168, 168);
+  --bg-white-2: #f8f9fa;
   --text-sm: 1rem;
   --text-md: 1.3;
   --title-1: 2.4rem;
