--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -60,7 +60,7 @@
 }
 .accordion-container {
   padding: 50px;
-  background-color: var(--bg-blue-light);
+  background-color: var(--bg-white-2);
 }
 .accordion-top {
   height: 150px;
@@ -82,7 +82,7 @@
   gap: 3rem;
 }
 .accordion-bottom img {
-  width: 100%;
+  min-width: 40%;
   height: 100%;
 }
 .accordion-info {
@@ -143,10 +143,10 @@
   margin-bottom: 2rem;
 }
 .section-img-3 {
-  width: 250px;
+  max-height: 200px;
 }
 .section-blue {
-  background-color: var(--bg-blue-light);
+  background-color: var(--bg-white-2);
 }
 .section-row-img img {
   width: 40px;
